<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/background">

    <include layout="@layout/toptoolbar"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="@dimen/margin_15">
    <EditText
        android:id="@+id/input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/new_color"
        android:textColor="@color/new_color"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/new_color"/>
    <EditText
        android:id="@+id/input_mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_hint"
        android:imeOptions="actionNext"
        android:inputType="phone"
        android:layout_marginTop="@dimen/margin_15"
        android:textColorHint="@color/new_color"
        android:textColor="@color/new_color"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/new_color"/>
    <EditText
        android:id="@+id/input_messae"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_message"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/new_color"
        android:textColor="@color/new_color"
        android:layout_marginTop="@dimen/margin_15"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/new_color"/>

</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/margin_50">

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/new_color"
            android:text="@string/submit"
            android:textAllCaps="true"
            android:background="@color/colorPrimary"/>
    </LinearLayout>


</LinearLayout>