<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/background">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/logo"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="@dimen/margin_50"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_15">
            <CheckBox
                android:id="@+id/cb_student"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:text="Student"
                android:buttonTint="@color/new_color"
                android:textColor="@color/new_color"/>
            <CheckBox
                android:id="@+id/cb_teacher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:text="Teacher"
                android:buttonTint="@color/new_color"
                android:textColor="@color/new_color"/>
        </LinearLayout>
        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/new_color"
            android:textColor="@color/new_color"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/new_color"/>


        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:textColorHint="@color/new_color"
            android:textColor="@color/new_color"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            android:layout_marginTop="@dimen/margin_15"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/new_color"/>

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_50"
            android:textColor="@color/new_color"
            android:text="@string/login"
            android:background="@color/colorPrimary"/>
        <Button
            android:id="@+id/skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/new_color"
            android:text="SKIP"
            android:layout_marginTop="@dimen/margin_15"
            android:background="@color/colorPrimary"/>
    </LinearLayout>


</LinearLayout>