<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background">
    <include
        android:id="@+id/toptoolbar"
        layout="@layout/toptoolbar"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/submit"
        android:paddingBottom="20dp"
        android:layout_below="@+id/toptoolbar">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_fullname"
                android:textSize="12sp"
                android:textColor="@color/new_color"/>

            <TextView
                android:id="@+id/textName"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_40"
                android:textColor="@color/new_color"
                android:textSize="@dimen/margin_15"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/new_color"
                android:layout_marginTop="@dimen/margin_5"
                android:layout_marginBottom="@dimen/margin_5"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_description"
                android:textSize="12sp"
                android:layout_marginTop="@dimen/margin_40"
                android:textColor="@color/new_color"/>

            <TextView
                android:id="@+id/textDescription"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_40"
                android:background="@android:color/transparent"
                android:textColor="@color/new_color"
                android:textSize="@dimen/margin_15"
                android:inputType="textMultiLine"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/new_color"
                android:layout_marginTop="@dimen/margin_5"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/margin_40">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:layout_marginRight="@dimen/margin_5"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_from"
                        android:textSize="12sp"
                        android:textColor="@color/new_color"/>

                    <TextView
                        android:id="@+id/tv_fromDate"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/margin_40"
                        android:background="@android:color/transparent"
                        android:textColor="@color/new_color"
                        android:textSize="@dimen/margin_15"
                        android:gravity="bottom"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="@color/new_color"
                        android:layout_marginTop="@dimen/margin_5"
                        android:layout_marginBottom="@dimen/margin_5"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:layout_marginLeft="@dimen/margin_5"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_to"
                        android:textSize="12sp"
                        android:textColor="@color/new_color"/>

                    <TextView
                        android:id="@+id/tv_toDate"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/margin_40"
                        android:background="@android:color/transparent"
                        android:textColor="@color/new_color"
                        android:textSize="@dimen/margin_15"
                        android:gravity="bottom"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="@color/new_color"
                        android:layout_marginTop="@dimen/margin_5"
                        android:layout_marginBottom="@dimen/margin_5"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_50"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">
    <Button
        android:id="@+id/accept"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_50"
        android:background="@mipmap/background"
        android:text="Accept"
        android:textAllCaps="true"
        android:layout_weight=".5"
        android:textColor="@color/new_color"/>
        <Button
            android:id="@+id/reject"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_50"
            android:background="@mipmap/background"
            android:text="Reject"
            android:textAllCaps="true"
            android:layout_weight=".5"
            android:textColor="@color/new_color"/>
    </LinearLayout>
</RelativeLayout>