<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        fontPath="@string/regular_font"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        tools:ignore="MissingPrefix">

    </android.support.v7.widget.Toolbar>

    <!--<com.apextechies.eretort.common.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_below="@+id/toolbar"
        android:layout_margin="@dimen/margin_5"
        android:background="@mipmap/ic_launcher_round" />-->
    <RelativeLayout
        android:id="@+id/rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_below="@+id/toolbar">
        <com.atechexcel.common.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_margin="@dimen/margin_5"
            android:background="@mipmap/ic_launcher_round"/>

        <TextView
            android:id="@+id/name"
            fontPath="@string/bold_font"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/profile_image"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="User"
            android:textColor="@color/new_color"
            android:textSize="@dimen/textsize_15"
            android:layout_marginTop="@dimen/margin_10"
            tools:ignore="MissingPrefix"
            android:layout_marginLeft="@dimen/margin_10"/>
        <TextView
            android:id="@+id/date"
            fontPath="@string/bold_font"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/profile_image"
            android:layout_toRightOf="@+id/profile_image"
            android:ellipsize="end"
            android:singleLine="true"
            android:layout_below="@+id/name"
            android:text="Date"
            android:textColor="@color/new_color"
            android:textSize="@dimen/textsize_small"
            tools:ignore="MissingPrefix" />
        <TextView
            android:id="@+id/time"
            fontPath="@string/bold_font"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/date"
            android:layout_toRightOf="@+id/date"
            android:ellipsize="end"
            android:singleLine="true"
            android:layout_below="@+id/name"
            android:text="Time"
            android:textColor="@color/new_color"
            android:textSize="@dimen/textsize_small"
            tools:ignore="MissingPrefix" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl"
        android:layout_marginLeft="@dimen/margin_10"
        android:orientation="vertical">

        <TextView
            android:id="@+id/quesText"
            fontPath="@string/bold_font"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textsize_15"
            android:minHeight="55dp"
            android:textColor="@color/new_color"
            android:gravity="center_vertical"
            tools:ignore="MissingPrefix" />

        <ImageView
            android:id="@+id/quesImage"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="@dimen/margin_10" />
    </LinearLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/cadView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout"
        android:layout_marginTop="@dimen/margin_5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_50"
            android:orientation="horizontal"
            android:visibility="gone">

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/cadView"
        android:layout_marginBottom="@dimen/margin_5"
        android:layout_marginTop="@dimen/margin_5"
        android:background="@color/new_color" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_reply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view"
        android:layout_above="@+id/addAnswer"
        >

    </android.support.v7.widget.RecyclerView>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/addAnswer"
        android:layout_marginBottom="@dimen/margin_5"
        android:layout_marginTop="@dimen/margin_5"
        android:background="@color/new_color" />

    <TextView
        android:id="@+id/addAnswer"
        fontPath="@string/regular_font"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_50"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/margin_5"
        android:gravity="center"
        android:text="@string/postyouranswer"
        android:textColor="@color/new_color"
        tools:ignore="MissingPrefix" />
</RelativeLayout>